@@ -612,6 +612,9 @@ STARTINGITEMS=1 Ration, 1 Waterskin, 1 Torch, Pixie, 1 Apple, 1 Waterskin, 1 Tor
 # the system after which step to execute the script. Codes: 
 # PASSWORD, EMAIL, ANSI, THEME, RACE, GENDER, STATS, CLASS,
 # FACTIONS, END (default)
+# The following Codes may be used for scripts executed during 
+# a normal login.  ALLCHARLOGIN executes even during SWITCH.
+# CHARLOGIN, ALLCHARLOGIN
 # Only the ONCE_PROG will be executed.  See Scriptable Guide.
 # Default value is empty.
 # Ex: CHARCREATIONSCRIPTS=FACTIONS:LOAD=progs/chardesc.script
